리팩토링(place): 추천 여행지 조회 api 수정